--- a/index.html
+++ b/index.html
@@ -120,8 +120,10 @@
     </div>
     <div class="newsletter">
       <p>Subscribe to our newsletter for updates and tax tips.</p>
-      <input type="email" id="newsletterEmail" placeholder="Enter your email" />
-      <button onclick="subscribeNewsletter()">Subscribe</button>
+      <form action="https://docs.google.com/forms/d/e/1FAIpQLSfC_wME6fFrPslUGqdB9Y4JjcQ0KQwQe2jsrjKNMKNZFXo4aA/formResponse" method="POST" target="_blank">
+        <input name="entry.2005620554" type="email" placeholder="Enter your email" required />
+        <button type="submit">Subscribe</button>
+      </form>
     </div>
   </footer>
 
